# LabPilot

./: .gitignore  README.md  TESTING.md  agentic_showcase.py  benchmark_doyle_condition_ranking.py  benchmark_generalization.py  benchmark_strategies.py  build_llm_input.py  compare_trajectories.py  explore_data.py  label_ranking_baseline.py  modeling_quickstart.md  prd.md  pyproject.toml  reason_recommendation.py  recommend_next.py  requirements.txt
backend/: __init__.py  db.py  main.py  recommender.py  schemas.py  service.py
data/uploads/: 6c125b6e6ec3402fa0c643eed44f39d2_reactions_sample.csv
docs/: README.md  available_tooling.md  bandit_policy_approach.md  dataset.md  focus.md  frontend_build_guide.md  llm_reasoning_approach.md  modeling_quickstart.md  nextstep_takeaway.md  prd.md  progress_so_far.md
labpilot_frontend/: ideas.md  package-lock.json  package.json
labpilot_frontend/client/: index.html
labpilot_frontend/client/src/: App.tsx  index.css
labpilot_frontend/client/src/components/: AppLayout.tsx
labpilot_frontend/client/src/lib/: api.ts  mockData.ts
modeling/: __init__.py  bandit_policy.py  io_utils.py  surrogate.py
prompts/: recommendation_reasoning_prompt.md
scripts/: __init__.py  check_integrations.py  env_checks.py
scripts/benchmarks/: benchmark_generalization.py  benchmark_label_ranking.py  benchmark_strategies.py  plot_benchmark_results.py
scripts/demos/: __init__.py  agentic_showcase.py
scripts/training/: simulate_optimization.py  train_surrogate.py
scripts/workflows/: build_llm_input.py  reason_recommendation.py
(+7 files in other folders)
